# The-Automaton-Auditor

./: .env.example  README.md  main.py  pyproject.toml
audit/: audit_report_manual_upload.json  debug_state_snapshot.json
audit/debug_judges/: Defense_diagram_flow.json  Defense_doc_analyst.json  Defense_git_forensic_analysis.json  Defense_graph_orchestration.json  Defense_host_analysis_accuracy.json  Defense_judicial_nuance.json  Defense_safe_tool_engineering.json  Defense_state_management_rigor.json  Defense_structured_output.json  Defense_synthesis_conflict_resolution.json  Prosecutor_diagram_flow.json  Prosecutor_doc_analyst.json  Prosecutor_git_forensic_analysis.json  Prosecutor_graph_orchestration.json  Prosecutor_host_analysis_accuracy.json  Prosecutor_judicial_nuance.json  Prosecutor_safe_tool_engineering.json  Prosecutor_state_management_rigor.json  Prosecutor_structured_output.json  Prosecutor_synthesis_conflict_resolution.json  TechLead_diagram_flow.json  TechLead_doc_analyst.json  TechLead_git_forensic_analysis.json  TechLead_graph_orchestration.json  TechLead_host_analysis_accuracy.json  TechLead_judicial_nuance.json  TechLead_safe_tool_engineering.json  TechLead_state_management_rigor.json  TechLead_structured_output.json  TechLead_synthesis_conflict_resolution.json
audit/report_onself_generated/: audit_report.md
audit/report_peer_generated/: peer-owner__peer-repo-audit.json  peer-owner__peer-repo-audit.md
rubric/: rubric.json
src/: graph.py  state.py
tests/: test_detectors_smoke.py  test_graph.py  test_peer_repo.py  test_state.py
(+14 files in other folders)
